[package]
name = "horner-eval"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Radcliffe <andrewjradcliffe@gmail.com>"]
description = "A macro for evaluating polynomials via Horner's rule"
repository = "https://github.com/andrewjradcliffe/horner-eval/"
license = "MIT OR Apache-2.0"
keywords = ["polynomial", "polynomials", "macro", "math", "algebra"]
categories = ["mathematics", "algorithms"]

[dependencies]
num-traits = "0.2.15"
